<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/seleccion_ruta_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/titulo"
        android:gravity="right"
        android:stretchColumns="1"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:background="@color/orangehuila"
            android:gravity="center|bottom"
            android:text="SELECCION RUTA"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold">

        </TextView>
    </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp">
        <!--<TableRow-->
        <!--android:id="@+id/tableRow9"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="70dp"-->
        <!--android:layout_weight="0"-->
        <!--android:orientation="horizontal"-->
        <!--android:background="@drawable/menuselectruta">-->

        <!--</TableRow>-->
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cHWiFi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:text="@string/wifi" />

            <CheckBox
                android:id="@+id/chGPRS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gprs_activo" />


        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCiclo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ciclo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtCiclo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/municipio"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtMunicipio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1" />

            <Button
                android:id="@+id/btnTraerRuta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TRAER RUTA" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblSeccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seccion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtSeccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1">

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1" />

        </TableRow>

        <TextView
            android:id="@+id/lblArchivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </TableLayout>

</RelativeLayout>